[package]
name = "tree"
version = "1.1.0"
description = "A recreation of the MS-DOS and Windows Command Prompt command `tree` written in rust."
repository = "https://github.com/Ex-32/tree"
authors = ["Jenna Fligor <jenna@fligor.net>"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "3.2.5" }
